# argos-bot

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP-v2.md  TASKS.md  config.json  docker-compose.yml  promp-agente.md  skills-lock.json  spec.md
apps/analytics-engine/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/analytics-engine/app/: composition.py  main.py  preflight.py
apps/analytics-engine/app/api/: __init__.py  backtest.py  circuit_breaker.py  dataset.py  execution.py  incident.py  model.py  notification.py  observability.py  order.py  risk.py  training.py
apps/analytics-engine/app/application/: __init__.py
apps/analytics-engine/app/domain/: __init__.py
apps/analytics-engine/app/infrastructure/: __init__.py
apps/analytics-engine/notebooks/: colab_train_ensemble.ipynb
apps/analytics-engine/scripts/: export_training_data.py  import_checkpoint.py  import_pytorch_model.py  mock_execute_signal.py  mock_predict.py  validate_ensemble.py
apps/analytics-engine/tests/: __init__.py  test_health.py  test_subscriber_contract.py
apps/analytics-engine/tests/integration/: test_backtest_endpoint.py  test_circuit_breaker_endpoint.py  test_data_preprocessor.py  test_execution_endpoint.py  test_feature_analyzer.py  test_incident_endpoint.py  test_notification_endpoint.py  test_order_place_endpoint.py  test_risk_endpoint.py  test_ta_atr_calculator.py
apps/analytics-engine/tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_backtest_strategies.py  test_backtest_vos.py  test_ccxt_binance_adapter.py  (+33 more)
(+279 files in other folders)
