[project]
name = "argos-analytics-engine"
version = "0.0.1"
description = "Argos bot - analytics & IA engine (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "ta>=0.11",
    "ccxt>=4.1",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.15", "torch>=2.1"]
validation = ["matplotlib>=3.8", "scikit-learn>=1.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-x --tb=short"
asyncio_mode = "auto"
